--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Ensure Playwright CLI is executable
+        run: chmod +x ./node_modules/.bin/playwright
+
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
